--- a/app/views/hybrid_bills/steps/forms/components/_radio_buttons_reversed.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_radio_buttons_reversed.haml
@@ -1,8 +1,8 @@
 .input-group__inline
-  = f.radio_button attribute, false, value: false, checked: true, class: local_assigns.fetch(:no_class, nil)
+  = f.radio_button attribute, false, value: false, checked: true, class: local_assigns.fetch(:no_class, nil), data: local_assigns.fetch(:data_tag, nil)
   = f.label attribute, local_assigns.fetch(:no_label, t('user_forms.no_radio').capitalize), value: false
 .input-group__inline
-  = f.radio_button attribute, true, value: true, class: local_assigns.fetch(:yes_class, nil)
+  = f.radio_button attribute, true, value: true, class: local_assigns.fetch(:yes_class, nil), data: local_assigns.fetch(:data_tag, nil)
   = f.label attribute, local_assigns.fetch(:yes_label, t('user_forms.yes_radio').capitalize), value: true
 
 - if f.object.errors[attribute].present?
