--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,3 @@
-%h1 (Parliament.uk-Things) Health Check
+%h1
+  %span (Parliament.uk-Things) Health Check
 %p This page exists so that our load balancer can tell that the app is running
