--- a/app/views/hybrid_bills/steps/submission-complete.haml
+++ b/app/views/hybrid_bills/steps/submission-complete.haml
@@ -3,9 +3,9 @@
 #content.section--primary{ tabindex: '0' }
   .container
     %h1
-      = t('hybrid_bills.submission-complete.title').capitalize
+      %span= t('hybrid_bills.submission-complete.title').capitalize
       %span.sr-only .
-      %span= "#{t('hybrid_bills.id' + @business_id + '.object_title')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"
+      %span.context= "#{t('hybrid_bills.id' + @business_id + '.object_title')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"
 
     .status--highlight
       %p
