--- a/app/views/places/show.html.haml
+++ b/app/views/places/show.html.haml
@@ -1,6 +1,7 @@
 .section--primary
   .container
-    %h1= @place.name
+    %h1
+      %span= @place.name
     %ol.list--block
       %li
         .card
