--- a/app/views/constituencies/map.html.haml
+++ b/app/views/constituencies/map.html.haml
@@ -1,5 +1,6 @@
 = content_for :title, "Map of #{@constituency.name}"
 #content.section--primary{ tabindex: "0" }
   .container
-    %h1= @constituency.name
+    %h1
+      %span= @constituency.name
     = render 'shared/map'
