--- a/app/views/constituencies/show.html.haml
+++ b/app/views/constituencies/show.html.haml
@@ -1,10 +1,11 @@
 #content.section--primary{ tabindex: "0" }
   .container
-    %h1= title(@constituency.name)
-    - @constituency.regions.each do |region|
-      %p.lead
-        = t('.constituency_in')
-        = link_to(region.name, places_show_path(region.gss_code))
+    %h1
+      %span= title(@constituency.name)
+      - @constituency.regions.each do |region|
+        %span.context
+          = t('.constituency_in')
+          = link_to(region.name, places_show_path(region.gss_code))
     = render 'shared/map'
 
 = render 'constituencies/constituency'
