--- a/app/views/hybrid_bills/steps/petition-online.haml
+++ b/app/views/hybrid_bills/steps/petition-online.haml
@@ -3,9 +3,9 @@
 #content.hero.theme--grey-4{ tabindex: '0' }
   .container
     %h1
-      = t('hybrid_bills.petition_online').capitalize
+      %span= t('hybrid_bills.petition_online').capitalize
       %span.sr-only .
-      %span= "#{t('hybrid_bills.id' + @business_id + '.object_title')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"
+      %span.context= "#{t('hybrid_bills.id' + @business_id + '.object_title')} #{t('hybrid_bills.hs2')} #{t('hybrid_bills.hs2_bill').capitalize}"
 
     %h2.typography--light
       = "#{t('hybrid_bills.step_2').capitalize} #{t('hybrid_bills.step_1_5')}"
