--- a/app/views/parliaments/show.html.haml
+++ b/app/views/parliaments/show.html.haml
@@ -1,6 +1,7 @@
 %section.section--primary
   .container
-    %h1= title("#{@parliament.date_range(date_format: '%Y')} #{t('parliament').capitalize}")
+    %h1
+      %span= title("#{@parliament.date_range(date_format: '%Y')} #{t('parliament').capitalize}")
 
     = link_to("#{t('view_all').capitalize} #{t('parliament_plural')}", parliaments_path)
     /= link_to('Next Parliament', parliament_next_path(@parliament.graph_id)) if @parliament.next_parliament?
