--- a/app/views/work_packages/show.html.haml
+++ b/app/views/work_packages/show.html.haml
@@ -2,7 +2,8 @@
 
 .section--primary#content{ tabindex: "0" }
   .container
-    %h1= page_title
+    %h1
+      %span= page_title
 
     %ul
       %li
