[WEBDEV-589] Reword titles in concepts

--- a/app/views/concepts/show.html.haml
+++ b/app/views/concepts/show.html.haml
@@ -8,13 +8,13 @@
     = Parliament::Utils::Helpers::MarkdownHelper.markdown(@concept.definition)
 
     - if @concept_articles.any?
-      %h2= "Articles in this section"
+      %h2= t('.articles_about_concept')
       %ul.list
         - @concept_articles.each do |article|
           %li= link_to(sanitize(article.article_title), article_path(article.graph_id))
 
     - if @narrower_concepts.any?
-      %h2= "Other topics in this section"
+      %h2= t('.narrower_concepts')
       %ul.list
         - @narrower_concepts.each do |concept|
           %li= link_to(sanitize(concept.name), concept_path(concept.graph_id))
