[Fix/WEBDEV-588] Amend structure of H1 with date-range

--- a/app/views/parliaments/houses/parties/show.html.haml
+++ b/app/views/parliaments/houses/parties/show.html.haml
@@ -2,8 +2,8 @@
 %section.section--primary
   .container
     %h1
+      %small= link_to("#{@parliament.date_range(date_format: '%Y')} #{t('parliament').capitalize}", parliament_path(@parliament.graph_id))
       %span= @party.name
-      %span= link_to("#{@parliament.date_range(date_format: '%Y')} #{t('parliament').capitalize}", parliament_path(@parliament.graph_id))
 
 %section#content{ tabindex: "0" }
   .container
