--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,10 +1,8 @@
 .article--wrapper
   .container
-    %article{ id: 'content', tabindex: '0' }
-      - if @root_collections.any?
-        %p= render partial: 'shared/article/delimited_collection_links', locals: { links: @root_collections }
 
-      = render partial: 'shared/article/header', locals: { title: @article.title, summary: @article.article_summary, collections: @collections }
+    %article{ id: 'content', tabindex: '0' }
+      = render partial: 'shared/article/header', locals: { title: @article.title, summary: @article.article_summary, collections: @collections, root_collections: @root_collections }
       = render partial: 'shared/article/main', locals: { content: @article.article_body }
       = render partial: 'shared/article/footer', locals: { collections: @collections }
 
