--- a/app/views/people/_roles_description.html.haml
+++ b/app/views/people/_roles_description.html.haml
@@ -4,3 +4,4 @@
       = PersonDescriptionHelper.current_description(@person, "#{l(@sorted_incumbencies.first.start_date, format: :year_only)}", @current_roles)
     - elsif @history[:current].empty?
       = PersonDescriptionHelper.former_description(@person.display_name, "#{l(@sorted_incumbencies.first.start_date, format: :year_only)}", "#{l(@sorted_incumbencies.last.end_date, format: :year_only)}")
+    = link_to('View all roles', "#{person_path(@person.graph_id)}/#{t('people.show.associations')}")
