[WEBSITE-1840] Add view all roles link to description
* Added view all roles link to description
* Removed committee memberships from roles description, and removed redundant roles partials, since they have been moved into lists

--- a/app/views/work_packages/_completed_business_item.html.haml
+++ b/app/views/work_packages/_completed_business_item.html.haml
@@ -1,4 +1,4 @@
-- if business_item.class == BusinessItemGroupingHelper::BusinessItemGroupedObject
+- if business_item.class == Parliament::Utils::Helpers::BusinessItemGroupingHelper::BusinessItemGroupedObject
   %h3= "#{l(business_item.date, format: :default)}"
   - business_item.nodes.each do |business_item_node|
     - if business_item_node.sorted_procedure_steps_by_distance.any? || !business_item_node.weblink.empty?
