[PET-54] Modify questions HTML to reflect new design

--- a/app/views/questions/_person_details.html.haml
+++ b/app/views/questions/_person_details.html.haml
@@ -1,6 +1,4 @@
-= sanitize body
 .card--small
-  %h3= submitted_on
   %figure.avatar--round
     = link_to(person_path(person.graph_id), { aria: { hidden: "true" }, tabindex: "-1" }) do
       %picture
@@ -9,9 +7,10 @@
         - else
           %img{ src: "#{Pugin::ASSET_LOCATION_URL}/#{Pugin::ASSET_VERSION}/images/placeholder_members_image.png" }
   .card__details
-    %p
+    %h3
       = link_to(person.full_name, person_path(person.graph_id))
-    %p
+    %p.typography--heavy
       = role
       - if incumbency && !incumbency.current?
         = "until #{incumbency.end_date.strftime('%d %B %Y')}"
+= sanitize body
