--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -5,6 +5,20 @@
       - if @answering_body
         %span.context= "#{t('.for').capitalize} #{@answering_body.name}"
 
+    .flex--2
+
+      .block.theme--mint--light.accent
+        %p.typography--heavy= "#{@asking_person.full_name}"
+        %time{ datetime: @question.asked_at_date.strftime('%d-%m-%Y') }= "#{t('.asked_on').capitalize} #{@question.asked_at_date.strftime('%d %B %Y')}"
+
+      .block.accent--purple
+        - if @answering_body
+          %p.typography--heavy= "#{@answering_body.name}"
+        - if @answer.present?
+          %time{ datetime: @answer.answer_given_date.strftime('%d-%m-%Y') }= "#{t('.answered_on').capitalize} #{@answer.answer_given_date.strftime('%d %B %Y')}"
+        - else
+          %p= t('.not_answered').capitalize
+
 %section{ id: 'content', tabindex: '0' }
   .container
 
@@ -12,13 +26,13 @@
     .block--border__bottom
       %h2= t('.question').capitalize
       - role = @asking_person_seat_incumbency.house_of_lords? ? "#{t('.member_of').capitalize} #{t('house_of_lords')}" : "#{t('.mp_for')} #{@constituency.name}"
-      = render partial: 'person_details', locals: { body: @question.text, person: @asking_person, role: role, incumbency: @asking_person_seat_incumbency, submitted_on: "#{t('.asked_on').capitalize} #{@question.asked_at_date.strftime('%d %B %Y')} #{t('.by')}" }
+      = render partial: 'person_details', locals: { body: @question.text, person: @asking_person, role: role, incumbency: @asking_person_seat_incumbency }
 
     -# Answer
     .block--border__bottom
       %h2= t('.answer').capitalize
       - if @answer.present?
-        = render partial: 'person_details', locals: { body: @answer_text, person: @answering_person, role: "#{@government_position.name}", incumbency: @answering_person_government_incumbency, submitted_on: "#{t('.answered_on').capitalize} #{@answer.answer_given_date.strftime('%d %B %Y')} #{t('.by')}" }
+        = render partial: 'person_details', locals: { body: @answer_text, person: @answering_person, role: "#{@government_position.name}", incumbency: @answering_person_government_incumbency }
       - else
         .status--highlight
           = t('.not_answered').capitalize
