--- a/app/views/people/_roles_description.html.haml
+++ b/app/views/people/_roles_description.html.haml
@@ -3,4 +3,4 @@
     = PersonDescriptionHelper.current_description(@person, "#{l(@sorted_incumbencies.first.start_date, format: :year_only)}", @current_roles)
   - elsif @history[:current].empty?
     = PersonDescriptionHelper.former_description(@person.display_name, "#{l(@sorted_incumbencies.first.start_date, format: :year_only)}", "#{l(@sorted_incumbencies.last.end_date, format: :year_only)}")
-  = link_to('View all roles', person_associations_path(@person.graph_id))
+  = link_to(t('people.show.view_all_roles', name: @person.display_name), person_associations_path(@person.graph_id))
