--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -8,8 +8,10 @@
     .flex--2
 
       .block.theme--mint--light.accent
-        %p.typography--heavy= "#{@asking_person.full_name}"
-        %time{ datetime: @question.asked_at_date.strftime('%d-%m-%Y') }= "#{t('.asked_on').capitalize} #{@question.asked_at_date.strftime('%d %B %Y')}"
+        - if @asking_person
+          %p.typography--heavy= "#{@asking_person.full_name}"
+        - if @question.asked_at_date
+          %time{ datetime: @question.asked_at_date.strftime('%d-%m-%Y') }= "#{t('.asked_on').capitalize} #{@question.asked_at_date.strftime('%d %B %Y')}"
 
       .block.accent--purple
         - if @answering_body
@@ -25,7 +27,8 @@
     -# Question
     .block--border__bottom
       %h2= t('.question').capitalize
-      - role = @asking_person_seat_incumbency.house_of_lords? ? "#{t('.member_of').capitalize} #{t('house_of_lords')}" : "#{t('.mp_for')} #{@constituency.name}"
+      - if @asking_person_seat_incumbency
+        - role = @asking_person_seat_incumbency.house_of_lords? ? "#{t('.member_of').capitalize} #{t('house_of_lords')}" : "#{t('.mp_for')} #{@constituency.name}"
       = render partial: 'person_details', locals: { body: @question.text, person: @asking_person, role: role, incumbency: @asking_person_seat_incumbency }
 
     -# Answer
