[WEBDEV-626] Remove card as container of the print button

--- a/app/views/shared/article/_footer.html.haml
+++ b/app/views/shared/article/_footer.html.haml
@@ -7,8 +7,5 @@
   %ul.list--inline
     // Print button
     %li.visually-hidden{ aria: { hidden: 'true' } }
-      .card
-        .card__details
-          = render partial: 'pugin/icons/print'
-          %a.btn--print{ href: '#' }
-            = t('print').capitalize
+      = render partial: 'pugin/icons/print'
+      %a.btn--print{ href: '#' }= t('print').capitalize
