--- a/app/views/people/_written_questions.html.haml
+++ b/app/views/people/_written_questions.html.haml
@@ -1,5 +1,3 @@
-- name_possessive = @person.given_name + (@person.given_name[-1,1] == 's' ? "'" : "'s")
-
 .block--border__bottom
   - if @question
     %h2= t('people.show.written_questions.title')
@@ -18,7 +16,7 @@
           - if @question.asked_at_date
             %time{ datetime: l(@question.asked_at_date, format: '%y-%m-%d') }= l(@question.asked_at_date, format: '%d %B %Y')
 
-    = link_to(t('people.show.written_questions.view_all', name: name_possessive), person_questions_written_path(@person.graph_id), class: ['btn--primary'])
+    = link_to(t('people.show.written_questions.view_all'), person_questions_written_path(@person.graph_id), class: ['btn--primary'])
 
   - else
     .status--highlight
