[Fix] Question page when answering body has no government position - Handle no government position in controller - Update view to handle no role - Pass government position name to view rather than government_position grom node - Update specs

--- a/app/views/questions/_person_details.html.haml
+++ b/app/views/questions/_person_details.html.haml
@@ -9,8 +9,9 @@
   .card__details
     %h3
       = link_to(person.full_name, person_path(person.graph_id))
-    %p.typography--heavy
-      = role
-      - if incumbency && !incumbency.current?
-        = "until #{incumbency.end_date.strftime('%d %B %Y')}"
+    - if role.present?
+      %p.typography--heavy
+        = role
+        - if incumbency && !incumbency.current?
+          = "until #{incumbency.end_date.strftime('%d %B %Y')}"
 = sanitize body
