--- a/app/views/questions/_person_details.html.haml
+++ b/app/views/questions/_person_details.html.haml
@@ -3,12 +3,12 @@
     = link_to(person_path(person.graph_id), { aria: { hidden: "true" }, tabindex: "-1" }) do
       %picture
         - if person.image_id != 'placeholder'
-          %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{person.image_id}.jpeg?crop=CU_1:1&width=260&quality=80", alt: "#{person.full_name} 260 by 260 pixels" }
+          %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{person.image_id}.jpeg?crop=CU_1:1&width=260&quality=80", alt: "#{person.display_name} 260 by 260 pixels" }
         - else
           %img{ src: "#{Pugin::ASSET_LOCATION_URL}/#{Pugin::ASSET_VERSION}/images/placeholder_members_image.png" }
   .card__details
     %h3
-      = link_to(person.full_name, person_path(person.graph_id))
+      = link_to(person.display_name, person_path(person.graph_id))
     - if role.present?
       %p.typography--heavy
         = role
