--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -10,7 +10,7 @@
       .block.theme--mint--light.accent
         - if @asking_person
           %p.typography--heavy
-            = link_to(@asking_person.full_name, person_questions_written_path(@asking_person.graph_id))
+            = link_to(@asking_person.display_name, person_questions_written_path(@asking_person.graph_id))
         - if @question.asked_at_date
           %time{ datetime: @question.asked_at_date.strftime('%d-%m-%Y') }= "#{t('.asked_on').capitalize} #{@question.asked_at_date.strftime('%d %B %Y')}"
 
