--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -1,7 +1,7 @@
 .section--primary
   .container
     %h1
-      %span= title(@question.heading)
+      %span= title(sanitize @question.heading)
       - if @answering_body
         %span.context= "#{t('.for').capitalize} #{@answering_body.name}"
 
