[PET-152] Adjust when to contact an MP for devolved issues

--- a/app/views/people/_when_to_contact.html.haml
+++ b/app/views/people/_when_to_contact.html.haml
@@ -11,5 +11,6 @@
       %li= t('.immigration')
       %li= t('.school_closures')
       %li= t('.transport')
-    %p= link_to(t('.who_else_can_help'), who_should_i_contact_with_my_issue_path)
+    %p= t('.if_you_live_in_scotland_wales_northern_ireland')
+    %p= link_to(t('.who_should_i_contact_with_my_issue'), who_should_i_contact_with_my_issue_path)
   %p= t('.contact_postcode')
