--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -23,7 +23,7 @@
     - if @person.image_id(show_placeholder:false)
       = render 'image'
 
-    - if @history
+    - if @history && @most_recent_incumbency.house.name != 'House of Lords'
       = render 'roles_description'
 
 %section
