--- a/app/views/people/_roles_description.html.haml
+++ b/app/views/people/_roles_description.html.haml
@@ -1,6 +1,10 @@
 %p.lead
-  - if @history[:current].any?
-    = PersonDescriptionHelper.current_description(@person, "#{l(@sorted_incumbencies.first.start_date, format: :year_only)}", @current_roles)
-  - elsif @history[:current].empty?
-    = PersonDescriptionHelper.former_description(@person.display_name, "#{l(@sorted_incumbencies.first.start_date, format: :year_only)}", "#{l(@sorted_incumbencies.last.end_date, format: :year_only)}")
-  = link_to('View all roles', person_associations_path(@person.graph_id))
+  - if Parliament::Utils::Helpers::HousesHelper.commons?(@most_recent_incumbency&.house)
+    - if @history[:current].any?
+      = PersonDescriptionHelper.current_description(@person, "#{l(@sorted_incumbencies.first.start_date, format: :year_only)}", @current_roles)
+    - elsif @history[:current].empty?
+      = PersonDescriptionHelper.former_description(@person.display_name, "#{l(@sorted_incumbencies.first.start_date, format: :year_only)}", "#{l(@sorted_incumbencies.last.end_date, format: :year_only)}")
+    = link_to(t('people.show.roles_description.view_all_roles'), person_associations_path(@person.graph_id))
+  - else
+    = @person.display_name + t('possessive')
+    = link_to(t('people.show.roles_description.roles_in_parliament'), person_associations_path(@person.graph_id))
