--- a/app/views/media/show.html.haml
+++ b/app/views/media/show.html.haml
@@ -17,9 +17,9 @@
             = "#{t('.title').capitalize}"
             = link_to(@person.display_name, person_path(@person.graph_id))
 
-        %p= t('.license', link: link_to(t('.license_link'), 'https://creativecommons.org/licenses/by/3.0/')).html_safe
+        %p= t('.licence', link: link_to(t('.licence_link'), 'https://creativecommons.org/licenses/by/3.0/')).html_safe
 
-        %p= t('.license_context', link: link_to(t('.license_context_link'), 'https://creativecommons.org/licenses/by/3.0/')).html_safe
+        %p= t('.licence_context', link: link_to(t('.licence_context_link'), 'https://creativecommons.org/licenses/by/3.0/')).html_safe
 
         = link_to(t('.download_original').capitalize + ' ' + t('.download_res_original'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.tif?download=true", class: 'btn--primary', 'aria-label': t('.download_original').capitalize + " portrait of #{@person.display_name} " + t('.alt_text_wide_original'), download: '' )
         = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_original'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?download=true", class: 'btn--primary', 'aria-label': t('.download_jpeg').capitalize + " portrait of #{@person.display_name} " + t('.alt_text_wide_original'), download: '' )
