--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -20,6 +20,10 @@
             = current_party_details + ' -' if current_party_details
             = @person.statuses[:house_membership_status].join(' and ')
 
+    - if @current_incumbency && Pugin::Feature::Bandiera.show_activity_links?
+      .status--highlight.theme--purple--light
+        = sanitize t('.link_to_original', original_site_link: link_to(t('.original_version_link_text'), "http://www.parliament.uk/biographies/Commons/member/#{@person.mnis_id}"), known_issues_link: link_to(t('.known_issues_link_text'), article_path(t('.known_issues_graph_id'))))
+
     - if @person.image_id(show_placeholder:false)
       = render 'image'
 
@@ -36,7 +40,3 @@
             = render 'when_to_contact'
           = render 'contact_details'
     = render 'related_links'
-
-    - if @current_incumbency && Pugin::Feature::Bandiera.show_activity_links?
-      .status--highlight.theme--purple--light
-        = "#{t('.link_to_original', link: link_to(t('.link_to_original_version'), "http://www.parliament.uk/biographies/Commons/member/#{@person.mnis_id}"))}".html_safe
